ADD: namespace size; REF: lint
